fix layout issues with overflow

--- a/web-client/App.css
+++ b/web-client/App.css
@@ -48,8 +48,5 @@ img {
 }
 
 .App {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
   overflow-y: scroll;
 }
