--- a/web-client/components/Layout/styles.css
+++ b/web-client/components/Layout/styles.css
@@ -8,8 +8,12 @@ $toolbar-width: 300px;
 $left-pane-width: 300px;
 $middle-pane-width: 930px;
 
+$total-width: 1230px;
+
 .Page {
   position: relative;
+
+  margin-left: calc((100% - $total-width) / 2);
 
   min-height: 100%;
   padding-top: $header-height;
